--- a/NEWS
+++ b/NEWS
@@ -406,6 +406,9 @@ version 1.0.13: (2017-08-15)
 - Minor changes to documentation
 - Minor changes to vignette
 
+version 1.1.0: (2017-08-16)
+- Minor changes required to pass BiocCheck (used formatR and BiocChecks)
+
 
 - DEVELOPMENT NOTES (potential future changes):
   * Delete BASiCS_VarianceDecomp? 
