--- a/NEWS
+++ b/NEWS
@@ -409,6 +409,9 @@ version 1.0.13: (2017-08-15)
 version 1.1.0: (2017-08-16)
 - Minor changes required to pass BiocCheck (used formatR and BiocChecks)
 
+version 0.99.0: (2017-08-28)
+- Minor changes to complete Bioconductor submission checklist
+- Version re-numbered according to Bioconductor guidelines
 
 - DEVELOPMENT NOTES (potential future changes):
   * Delete BASiCS_VarianceDecomp? 
